fix: remove overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+   overflow: hidden;
+}
+
+
 #map {
    height: 100vh;
 }
